[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pdm]
distribution = false
[tool.poetry]
name = "VAUID"
version = "0.1.0"
description = "基于gsuid-core, 支持NoneBot2 & HoshinoBot & ZeroBot & YunzaiBot的全功能某FPS游戏Bot插件"
authors = ["Agnes Digital <Z735803792@163.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Agnes4m/VAUID"
repository = "https://github.com/Agnes4m/VAUID"
documentation = "https://docs.sayu-bot.com/"
packages = [{ include = "VAUID" }]
exclude = ["tests", "deploy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Agnes4m/VAUID/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
[[tool.poetry.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "default"

[tool.basedpyright]
deprecateTypingAliases = false

[project]
name = "VAUID"
version = "0.1.0"
description = "基于gsuid-core, 支持NoneBot2 & HoshinoBot & ZeroBot & YunzaiBot的全功能某FPS游戏Bot插件"
authors = [{ name = "Agnes Digital", email = "Z735803792@163.com" }]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
